--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -13,7 +13,7 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
 
@@ -26,6 +26,7 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          sudo apt-get update
           wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
 
       - name: Install Repo
@@ -60,6 +61,15 @@ jobs:
         run: |
           cd friendlywrt-rk3328/friendlywrt/package
           git clone https://github.com/frainzy1477/luci-app-clash
+          mkdir -p friendlywrt-rk3328/friendlywrt/package/base-files/files/etc/clash
+          cd friendlywrt-rk3328/friendlywrt/package/base-files/files/etc/clash
+          wget https://github.com/frainzy1477/clash_dev/releases/download/v0.17.2/clash-linux-armv8-v0.17.2.gz
+          gunzip clash-linux-armv8-v0.17.2.gz
+          chmod +x clash-linux-armv8-v0.17.2
+          mv clash-linux-armv8-v0.17.2 clash
+          wget https://github.com/Dreamacro/maxmind-geoip/releases/download/20200204/Country.mmdb
+          cd friendlywrt-rk3328/friendlywrt/package/base-files/files/usr/share/clash
+          echo 0.17.2 > core_version
 
       - name: Update Target.mk
         run: |
@@ -83,7 +93,7 @@ jobs:
         if: always()
         run: |
           cd friendlywrt-rk3328/friendlywrt
-          make download -j1
+          make download -j8
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
 
