Update NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml

--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -92,6 +92,11 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
+      - name: Mods
+        run: |
+          cd friendlywrt-rk3328
+          . ../remove_used_config.sh
+
       - name: Costom Configure File
         run: |
           cd friendlywrt-rk3328/friendlywrt
