--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -65,6 +65,12 @@ jobs:
           cd friendlywrt-rk3328/friendlywrt/package
           git clone https://github.com/frainzy1477/luci-app-clash
 
+      - name: Install OpenClash
+        run: |
+          git clone https://github.com/vernesong/OpenClash.git tmp
+          mv tmp/luci-app-openclash friendlywrt-rk3328/friendlywrt/package
+          rm -rf tmp
+
       - name: Install Clash Binaries
         run: |
           mkdir -p friendlywrt-rk3328/friendlywrt/package/base-files/files/etc/clash
@@ -73,12 +79,19 @@ jobs:
           gunzip clash-linux-armv8-v0.18.0.gz
           chmod +x clash-linux-armv8-v0.18.0
           mv clash-linux-armv8-v0.18.0 clash
+          mkdir ../openclash
+          cp clash ../openclash/
 
       - name: Set Clash Version
         run: |
           mkdir -p friendlywrt-rk3328/friendlywrt/package/base-files/files/usr/share/clash
           cd friendlywrt-rk3328/friendlywrt/package/base-files/files/usr/share/clash
           echo 0.18.0 > core_version
+
+      - name: Install AdGuard Home
+        run: |
+          cd friendlywrt-rk3328/friendlywrt/package
+          git clone https://github.com/rufengsuixing/luci-app-adguardhome.git
 
       - name: Update Target.mk
         run: |
