--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -112,9 +112,9 @@ jobs:
           cp -r lede/package/network/config/firewall friendlywrt/package/network/config/
           sed -i '/CONFIG_NETFILTER_XT_TARGET_HMARK/i\CONFIG_NETFILTER_XT_TARGET_FULLCONENAT=m' kernel/arch/arm64/configs/nanopi-r2_linux_defconfig
           sed -i '/CONFIG_NETFILTER_XT_TARGET_IDLETIMER/a\obj-$(CONFIG_NETFILTER_XT_TARGET_FULLCONENAT) += xt_FULLCONENAT.o' kernel/net/netfilter/Makefile
-          wget -O kernel/net/netfilter/xt_FULLCONENAT.c https://raw.githubusercontent.com/soffchen/NanoPi-R2S/master/xt_FULLCONENAT/xt_FULLCONENAT.c
-          wget -O kernel/net/ipv4/netfilter/Kconfig https://raw.githubusercontent.com/soffchen/NanoPi-R2S/master/xt_FULLCONENAT/ipv4-netfilter.Kconfig
-          wget -O kernel/net/netfilter/Kconfig https://raw.githubusercontent.com/soffchen/NanoPi-R2S/master/xt_FULLCONENAT/netfilter.Kconfig
+          cp ../xt_FULLCONENAT/xt_FULLCONENAT.c kernel/net/netfilter/xt_FULLCONENAT.c
+          cp ../xt_FULLCONENAT/ipv4-netfilter.Kconfig kernel/net/ipv4/netfilter/Kconfig
+          cp ../xt_FULLCONENAT/netfilter.Kconfig kernel/net/netfilter/Kconfig
 
           sed -i '/CONFIG_IB/d;/CONFIG_SDK/d;/CONFIG_BUILDBOT/d;/CONFIG_ALL_KMODS/d;/CONFIG_ALL_NONSHARED/d' configs/config_rk3328
           sed -i '/iptparser/d;/docker/d;/DOCKER/d;/CONFIG_DISPLAY_SUPPORT/d;/CONFIG_AUDIO_SUPPORT/d' configs/config_rk3328
