--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -93,6 +93,12 @@ jobs:
           cd friendlywrt-rk3328/friendlywrt/package
           git clone https://github.com/rufengsuixing/luci-app-adguardhome.git
 
+      - name: Upgrade argon theme
+        run: |
+          cd friendlywrt-rk3328/friendlywrt/package
+          rm -rf luci-theme-argon
+          git clone https://github.com/jerrykuku/luci-theme-argon.git
+
       - name: Update Target.mk
         run: |
           cd friendlywrt-rk3328/friendlywrt/include
