Fix luci-theme-argon branch

--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -96,8 +96,8 @@ jobs:
       - name: Upgrade argon theme
         run: |
           cd friendlywrt-rk3328/friendlywrt/package
-          rm -rf luci-theme-argon
-          git clone https://github.com/jerrykuku/luci-theme-argon.git
+          rm -rf lean/luci-theme-argon
+          git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
 
       - name: Update Target.mk
         run: |
