--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -134,7 +134,7 @@ jobs:
           sed -i 's/pcdata(boardinfo.system or "?")/"ARMv8"/' friendlywrt/feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
           sed -i "/redirect_https/d" friendlywrt/package/network/services/uhttpd/files/uhttpd.config
           sed -i 's/option fullcone\t1/option fullcone\t\t0/' friendlywrt/package/network/config/firewall/files/firewall.config
-          sed -i 's/flow_offloading=1/flow_offloading=0/' friendlywrt/package/lean/luci-app-flowoffload/root/etc/uci-defaults/flowoffload
+          sed -i "s/flow_offloading '1'/flow_offloading '0'/" friendlywrt/package/lean/luci-app-flowoffload/root/etc/config/flowoffload
 
       - name: Custom Configure Files
         run: |
