--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -74,7 +74,7 @@ jobs:
           gunzip clash-linux-armv8-v0.19.0.gz
           chmod +x clash-linux-armv8-v0.19.0
           mv clash-linux-armv8-v0.19.0 clash
-          mkdir ../openclash/core
+          mkdir -p ../openclash/core
           cp clash ../openclash/core/
 
       - name: Set Clash Version
