--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -52,8 +52,6 @@ jobs:
           git clone https://github.com/coolsnowwolf/lede
           cd friendlywrt
           cp -r ../lede/package/lean package/
-          sed -i 's/^src-git luci.*/src-git luci https:\/\/github.com\/coolsnowwolf\/luci/' feeds.conf.default
-          sed -i 's/^src-git packages.*/src-git packages https:\/\/github.com\/coolsnowwolf\/packages/' feeds.conf.default
 
       - name: Install Luci for Clash
         run: |
@@ -92,18 +90,12 @@ jobs:
         run: |
           cd friendlywrt-rk3328/friendlywrt/package
           rm -rf lean/luci-theme-argon
-          git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
+          git clone https://github.com/jerrykuku/luci-theme-argon.git
 
       - name: Update Target.mk
         run: |
           cd friendlywrt-rk3328/friendlywrt/include
           sed -i 's/dnsmasq /dnsmasq-full default-settings luci /' target.mk
-
-      - name: Update Feeds
-        run: |
-          cd friendlywrt-rk3328/friendlywrt
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
 
       - name: Install Mods
         run: |
@@ -111,36 +103,17 @@ jobs:
           
           #cp ../patches/31-usb_wifi friendlywrt/package/base-files/files/etc/hotplug.d/usb/31-usb_wifi
 
-          rm -rf friendlywrt/package/network/config/firewall
-          cp -r lede/package/network/config/firewall friendlywrt/package/network/config/
-          sed -i '/CONFIG_NETFILTER_XT_TARGET_HMARK/i\CONFIG_NETFILTER_XT_TARGET_FULLCONENAT=m' kernel/arch/arm64/configs/nanopi-r2_linux_defconfig
-          sed -i '/CONFIG_NETFILTER_XT_TARGET_IDLETIMER/a\obj-$(CONFIG_NETFILTER_XT_TARGET_FULLCONENAT) += xt_FULLCONENAT.o' kernel/net/netfilter/Makefile
-          cp ../xt_FULLCONENAT/xt_FULLCONENAT.c kernel/net/netfilter/xt_FULLCONENAT.c
-          cp ../xt_FULLCONENAT/ipv4-netfilter.Kconfig kernel/net/ipv4/netfilter/Kconfig
-          cp ../xt_FULLCONENAT/netfilter.Kconfig kernel/net/netfilter/Kconfig
-
-          #git clone https://github.com/openwrt/openwrt
-          #rm -rf friendlywrt/package/libs
-          #cp -r openwrt/package/libs friendlywrt/package/
-          
-          sed -i '/CONFIG_IB/d;/CONFIG_SDK/d;/CONFIG_BUILDBOT/d;/CONFIG_ALL_KMODS/d;/CONFIG_ALL_NONSHARED/d' configs/config_rk3328
-          sed -i '/docker/Id;/CONFIG_DISPLAY_SUPPORT/d;/CONFIG_AUDIO_SUPPORT/d' configs/config_rk3328
-
-          sed -i '/Load Average/i\\t\t<tr><td width="33%"><%:CPU Temperature%></td><td><%=luci.sys.exec("cut -c1-2 /sys/class/thermal/thermal_zone0/temp")%></td></tr>' friendlywrt/feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
-          sed -i 's/pcdata(boardinfo.system or "?")/"ARMv8"/' friendlywrt/feeds/luci/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
           sed -i "/redirect_https/d" friendlywrt/package/network/services/uhttpd/files/uhttpd.config
-          sed -i 's/option fullcone\t1/option fullcone\t\t0/' friendlywrt/package/network/config/firewall/files/firewall.config
-          sed -i "s/flow_offloading '1'/flow_offloading '0'/" friendlywrt/package/lean/luci-app-flowoffload/root/etc/config/flowoffload
+
+      - name: Patch Kernel
+        run: |
+          cd friendlywrt-rk3328/kernel/
+          git apply ../../patches/001-add-full_cone_nat.patch
 
       - name: Custom Configure Files
         run: |
           rm -f friendlywrt-rk3328/friendlywrt/.config*
-          cp r2s-rk3328-config friendlywrt-rk3328/friendlywrt/.config
-
-      - name: Setting Defaults
-        run: |
-          cd friendlywrt-rk3328/friendlywrt
-          sed -i '/uci commit luci/i\uci set luci.main.mediaurlbase=/luci-static/argon' package/lean/default-settings/files/zzz-default-settings
+          cp r2s-rk3328-config friendlywrt-rk3328/configs/config_rk3328
 
       - name: Install UPX
         run: |
