--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -57,18 +57,19 @@ jobs:
         run: |
           cd friendlywrt-rk3328/friendlywrt/package
           git clone https://github.com/frainzy1477/luci-app-clash
-          git clone https://github.com/fw876/helloworld.git
-          git clone https://github.com/rufengsuixing/luci-app-adguardhome.git
-          
+          git clone https://github.com/rufengsuixing/luci-app-adguardhome
+
+          git clone https://github.com/fw876/helloworld
+          mv helloworld/luci-app-ssr-plus/ .
+          rm -rf helloworld/
+
           rm -rf lean/luci-theme-argon
-          git clone https://github.com/jerrykuku/luci-theme-argon.git
+          git clone https://github.com/jerrykuku/luci-theme-argon
 
-      - name: Install OpenClash
-        run: |
-          git clone https://github.com/vernesong/OpenClash.git tmp
-          mv tmp/luci-app-openclash friendlywrt-rk3328/friendlywrt/package
-          rm -rf tmp
-
+          git clone https://github.com/vernesong/OpenClash
+          mv OpenClash/luci-app-openclash/ .
+          rm -rf OpenClash/
+          
       - name: Install Clash Binaries
         run: |
           mkdir -p friendlywrt-rk3328/friendlywrt/package/base-files/files/etc/clash
