--- a/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
+++ b/.github/workflows/NanoPi-R2S RK3328 OpenWrt 19.07 Build.yml
@@ -103,7 +103,10 @@ jobs:
       - name: Install Mods
         run: |
           cd friendlywrt-rk3328
-          
+
+          sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/runc/Makefile
+          sed -i '/STAMP_BUILT/d' friendlywrt/feeds/packages/utils/containerd/Makefile
+
           #cp ../patches/31-usb_wifi friendlywrt/package/base-files/files/etc/hotplug.d/usb/31-usb_wifi
 
           sed -i "/redirect_https/d" friendlywrt/package/network/services/uhttpd/files/uhttpd.config
